# genomic_pca

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: documentation.yml  rust.yml
data/: subset.py
src/: build.rs  main.rs  prepare.rs  vcf.rs
tests/: README.md  disk.py  metrics.py  pca.py  plot.py  sweep.py  sweep_analyze.py  sweep_run.py  video.py
