[package]
name = "genomic_pca"
version = "0.0.2"
edition = "2021"
description = "A CLI tool for performing PCA on genomic data from VCF files."
license = "MIT"
repository = "https://github.com/SauersML/genomic_pca"
readme = "README.md"
keywords = [
    "pca",
    "genomics",
    "svd",
    "bioinformatics",
    "machine-learning",
]
categories = [
    "algorithms",
    "mathematics",
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
]
documentation = "https://github.com/SauersML/genomic_pca"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
url = "=2.4.1" # Pinned to avoid newer ICU versions
efficient_pca = "=0.1.6" # Pinned to use bincode 1.3.3
env_logger = "0.11"
indicatif = "0.17"
log = "0.4"
ndarray = "0.16"
noodles-vcf = "0.78"
num_cpus = "1.17"
rayon = "1.10"
bed-reader = "1.0"
statrs = "0.18"
icu_collections = "=1.4.0"
icu_normalizer = "=1.4.0"
icu_normalizer_data = "=1.4.0"
icu_properties = "=1.4.0"
icu_properties_data = "=1.4.0"
icu_provider = "=1.4.0"
writeable = "0.5"
yoke = "0.7"
potential_utf = "=0.1.0" # Pinned for Rust 1.75.0 compatibility
noodles-tabix = "=0.40.0" # Pin for older noodles-bgzf via noodles-vcf
native-tls = "=0.2.11" # Pinned for Rust 1.75.0 compatibility
zerofrom = "0.1"
bincode = "=1.3.3" # Pinned to be compatible with Rust 1.75.0
ndarray-linalg = { version = "0.17", default-features = false, features = ["openblas-static"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
strip = false
