[package]
name = "genomic_pca"
version = "0.0.2"
edition = "2021"
description = "A CLI tool for performing PCA on genomic data from VCF files."
license = "MIT"
repository = "https://github.com/SauersML/genomic_pca"
readme = "README.md"
keywords = [
    "pca",
    "genomics",
    "svd",
    "bioinformatics",
    "machine-learning",
]
categories = [
    "algorithms",
    "mathematics",
    "science",
    "science::bioinformatics",
    "science::bioinformatics::genomics",
]
documentation = "https://github.com/SauersML/genomic_pca"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
efficient_pca = { git = "https://github.com/SauersML/efficient_pca.git", branch = "main", default-features = false }
env_logger = "0.11.8"
flume = { version = "0.11.1", features = ["select"] }
indicatif = "0.17.11"
libc = "0.2.172"
log = "0.4.27"
ndarray = "0.16.1"
noodles-vcf = "0.78.0"
num_cpus = "1.17.0"
rayon = "1.10.0"
bed-reader = "1.0.6"
statrs = "0.18.0"
url = "2.5.4"
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
serde_json = { version = "1.0.140", optional = true }
ndarray-linalg = { version = "0.17.0", default-features = false }
thiserror = "2.0.12"

[features]
default = ["openblas-openblas"]

# Format: [genomic_pca backend]-[efficient_pca backend]

# 1. OpenBLAS + OpenBLAS
openblas-openblas = ["ndarray-linalg/openblas-static", "efficient_pca/backend_openblas"]

# 2. OpenBLAS + Faer (genomic uses OpenBLAS, efficient uses Faer)
openblas-faer = ["ndarray-linalg/openblas-static", "efficient_pca/backend_faer"]

# 4. MKL + MKL
mkl-mkl = ["ndarray-linalg/intel-mkl-static", "efficient_pca/backend_mkl"]

# 5. MKL + Faer (genomic uses Intel MKL, efficient uses Faer)
mkl-faer = ["ndarray-linalg/intel-mkl-static", "efficient_pca/backend_faer"]

jemalloc = ["efficient_pca/jemalloc"]
eigensnp-diagnostics = ["efficient_pca/enable-eigensnp-diagnostics", "dep:serde_json"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3

[profile.profiling]
inherits = "release" # Inherit settings from the release profile
debug = true         # Enable debug symbols
strip = false        # Do not strip symbols
